--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         <activity android:name=".ActivitySerch"
             android:label="search">
         </activity>
+        <activity android:name=".ActivityNEWS" />
     </application>
 
 </manifest>
