--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.project_pavel">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -11,18 +12,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PROJECT_PAVEL">
-        <activity android:icon="@drawable/logo"
-            android:name=".MainActivity">
-
+        <activity android:name=".ActivityCom"></activity>
+        <activity
+            android:name=".MainActivity"
+            android:icon="@drawable/logo">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ActivitySerch"
-            android:label="search">
-        </activity>
+        <activity
+            android:name=".ActivitySerch"
+            android:label="search"></activity>
         <activity android:name=".ActivityNEWS" />
     </application>
 
