--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PROJECT_PAVEL">
-        <activity android:name=".ActivityCom"></activity>
+        <activity android:name=".ActivityCom"
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name=".MainActivity"
-            android:icon="@drawable/logo">
+            android:icon="@drawable/logo"
+            android:screenOrientation="portrait">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,8 +27,10 @@
         </activity>
         <activity
             android:name=".ActivitySerch"
-            android:label="search"></activity>
-        <activity android:name=".ActivityNEWS" />
+            android:label="search"
+            android:screenOrientation="portrait"></activity>
+        <activity android:name=".ActivityNEWS"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
