DODELATb ADAPTER DLIA DA

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,25 +12,31 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PROJECT_PAVEL">
-        <activity android:name=".ActivityCom"
-            android:screenOrientation="portrait"></activity>
-        <activity
-            android:name=".MainActivity"
-            android:icon="@drawable/logo"
-            android:screenOrientation="portrait">
-
+        <activity android:name=".Delate"></activity>
+        <activity android:name=".Entry">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Login" />
+        <activity
+            android:name=".ActivityCom"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".MainActivity"
+            android:icon="@drawable/logo"
+            android:screenOrientation="portrait">
+
+        </activity>
         <activity
             android:name=".ActivitySerch"
             android:label="search"
-            android:screenOrientation="portrait"></activity>
-        <activity android:name=".ActivityNEWS"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ActivityNEWS"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
